I added finished the booking functionality. The only thing that i need to add to the booking is disabeling days that are booked to make it easier for the user to book days

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 #listingModal{
     background-color: rgba(0, 0, 0, 0.55);
 }
+
+#addListingBtn{
+    background-color: rgba(0, 0, 0, 0.258);
+}
+
+#addListingBtn:hover{
+    background-color: white;
+}
